# eth_node

./: .gitattributes  .gitignore  00_INTERACTION_GUARDRAILS.md  01_DECISION_POLICY.md  02_WORKFLOW_STAGES.md  03_TEAM_MODEL_HANDOFFS.md  04_PERSONA_DIRECTORY.md  06_COMMAND_CHAIN_AND_PERSONALITY.md  07_QUALITY_DIMENSIONS.md  CHANGELOG.md  CLI_REFERENCE.md  Cargo.toml  DELIVERABLES_MANIFEST.md  DOCUMENTATION_ISSUES_FOUND.md  DOCUMENTATION_VALIDATION_REPORT.md  FORMAL_SPEC.md  GETTING_STARTED.md  GOVERNANCE_MODE.md  IMPLEMENTATION_CHRONICLE.md  NEXT_SESSION_INSTRUCTIONS.md  OPERATIONS_AND_ROLLBACK.md  PHASE2_AND_UPSTREAM_PLAN.md  PHASE2_FORMAL_SPEC.md  PHASE2_PROJECT_BRIEF.md  PHASE2_TASK_LIST.md  PHASE2_TRANSITION_TASKLIST.md  POST_RELEASE_MONITORING.md  PROJECT_BRIEF.md  PR_DESCRIPTION.md  README.md  RELEASE_CHECKLIST.md  REQUIREMENTS_SPEC_MANIFEST.md  RUNBOOK_KNOWN_FAILURES.md  TASK_LIST.md  context_refresh_prompt.md  easter_egg_quotes.json  easter_egg_quotes_batch2.json  initial_prompt.md  memory.md  prompts.md  (+1 more)
.github/: copilot-instructions.md
agents/: AGENT_TEMPLATE.md  backend-specialist-variant.md  brownfield-behavior-baseline-analyst.md  brownfield-incremental-rewrite-planner.md  brownfield-parity-test-engineer.md  c-systems-implementer.md  claire-voyant-agent.md  cli-specialist-variant.md  database-specialist-variant.md  defensive-programming-specialist-variant.md  developer-in-test.md  exploratory-tester.md  go-backend-implementer.md  greenfield-domain-discovery-expert.md  greenfield-evolution-architect.md  greenfield-formal-spec-author.md  human-spec-writer.md  integration-test-architect.md  javascript-legacy-migration-specialist.md  kotlin-jvm-implementer.md  maintainability-reviewer.md  meta-prompter.md  oracle-agent.md  powershell-automation-engineer.md  property-based-test-engineer.md  python-backend-specialist.md  python-cli-specialist.md  python-database-specialist.md  python-defensive-programming-specialist.md  readability-reviewer.md  refactoring-steward.md  rust-api-contract-serialization-specialist.md  rust-api-ergonomics-reviewer.md  rust-async-concurrency-reliability-specialist.md  rust-backend-specialist.md  rust-cli-specialist.md  rust-database-specialist.md  rust-defensive-programming-specialist.md  rust-documentation-quality-reviewer.md  rust-systems-performance-specialist.md  (+9 more)
cache/: solidity-files-cache.json
chronicle/: CHR-000-workspace-scaffold.md  CHR-001-primitives.md  CHR-002-test-infrastructure.md  CHR-003-rpc.md  CHR-004-signer.md  CHR-005-tx.md  CHR-006-events.md  CHR-007-contract.md  CHR-008-cli.md  CHR-009-executor.md  CHR-012-reth-prep.md  (+3 more)
src/eth_node/: Cargo.toml
src/eth_node/examples/: compare_to_anvil.rs  decode_nft_events.rs  simulate_transaction.rs
src/eth_node/src/: contract.rs  events.rs  lib.rs  primitives.rs  rpc.rs  signer.rs  tx.rs
src/eth_node/src/executor/: compare.rs  mod.rs  simulate.rs
src/eth_node/src/quality/: decode.rs  fuzz.rs  mod.rs
src/eth_node/tests/: decode_anvil_live.rs  decode_live.rs  executor_anvil_compare.rs  executor_call.rs  executor_compare.rs  executor_sim.rs  fuzz_properties.rs  integration_anvil_fixture.rs  integration_contract.rs  integration_events.rs  integration_rpc.rs  integration_tx.rs
src/eth_node/tests/contracts/: TestERC1155.sol  TestERC721.sol
src/eth_node/tests/helpers/: accounts.rs  anvil_fixture.rs  mod.rs
src/eth_node_cli/: Cargo.toml
src/eth_node_cli/src/: main.rs
src/eth_node_cli/tests/: decode_receipt_cli.rs  integration.rs
(+66 files in other folders)
