[package]
name = "eth_node"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-core = { workspace = true }
alloy-provider = { workspace = true }
alloy-transport = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-consensus = { workspace = true }
alloy-network = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-json-abi = { workspace = true }
alloy-dyn-abi = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-rlp = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
revm = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
proptest = { workspace = true }
hex = { workspace = true }
